--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="font-family:Andale Mono">
+<body style="font-family:Monaco">
 </head>
 <body>
 <h1><u>A data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants </u>
