--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="font-family:Monaco">
+	<body style="font-family:Monaco">
+	<title>Data Science and Relationships</title>
 </head>
 <body>
 <h1><u>A data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants </u>
