--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<body style="font-family:Monaco">
 	<title>Data Science and Relationships</title>
 </head>
-<body>
-<h1><u>A data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants </u>
-
-<p>
-	<span style="color: darkred;">Journal of Wellness and Being</span>
-	
-</p>
-</h1>
-
-<h2>
+<body style="font-family:Monaco">
+	<h1><u>A data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants</u></h1>
+	<p><span style="color: darkred;">Journal of Wellness and Being</span></p>
+	<h2></h2>
 	<p>Abstract</p>
-	
-	</h2>
-	<p>An analysis looking at the relationship between how particular one is in choosing a partner, that is, how specific one’s ideal match would be to their vision – and one’s word choice when talking about themselves. This idea was carried out by looking at an OKCupid dataset which provided anonymous information on it’s users in California., conducting sentiment analysis on multiple essays written by individuals, and comparing that to how specific they wanted their partner to be extracted the data. Moreover, subsets of age and education status were looked at to compare multiple aspects of data. We can conclude that despite their being no direct correlation between particularity and sentiments of self-description, the data clusters in groups when looking at different levels of education.</p>
-
-	<h2><p>Graphs</p></h2>
-	<p><fig><img src = 'age_plot.png' alt = "A plot of particularity against aggregate compound grouped by age" ><figcaption> A plot of particularity against aggregate compound grouped by age</figcaption></fig></p>
-	<p><fig><img src = 'education-part.png' alt = "A plot of particularity against aggregate compound grouped by education" ><figcaption> A plot of particularity against aggregate compound grouped by education</figcaption></fig></p>
-	<p><fig><img src = 'TSNE.png' alt = "A data visualisation of particularity, aggregate compound,neutrality,positivity clustered by education classes" ><figcaption> A data visualisation of particularity, aggregate compound,neutrality,positivity clustered by education classes</figcaption></fig></p>
-
+	<p>An analysis looking at the relationship between how particular one is in choosing a partner, that is, 
+		how specific one’s ideal match would be to their vision – and one’s word choice when talking about themselves. This idea was carried out by looking at an OKCupid dataset which provided anonymous information on it’s users in California., conducting sentiment analysis on multiple essays written by individuals, and comparing that to how specific they wanted their partner to be extracted the data. Moreover, subsets of age and education status were looked at to compare multiple aspects of data. We can conclude that despite their being no direct correlation between particularity and sentiments of self-description,
+		the data clusters in groups when looking at different levels of education.</p>
+	<h2></h2>
+	<p>Graphs</p>
+	<p><img alt="A plot of particularity against aggregate compound grouped by age" src='age_plot.png'></p>
+	<figcaption>
+		The graph representing particularity against aggregate compounded sentimentality grouped by age. Red represents age group 18 – 21. Blue represents 22 – 27. Green represents 28 -30. Yellow represents 31-40. Cyan represents ages 41-50. Black represents ages 51-60. Light green represents ages 60+.
+	</figcaption>
+	<p></p>
+	<p><img alt="A plot of particularity against aggregate compound grouped by education" src='education-part.png'></p>
+	<figcaption>
+		A graph representing particularity against aggregate compounded sentimentality grouped by education. Blue represents primary education. Green represents secondary education. Red represents tertiary education.
+	</figcaption>
+	<p></p>
+	<p><img alt="A data visualisation of particularity, aggregate compound,neutrality,positivity clustered by education classes" src='TSNE.png'></p>
+	<figcaption>
+		Advanced data clustering techniques have clustered data subsets of age, particularity, positivity, negativity, neutrality and compound according to education classes. The red plots indicate Primary education, blue indicates Secondary, Cyan indicates Tertiary.
+	</figcaption>
+	<p></p>
 </body>
 </html>
